--- a/app/views/shared/_navbar-transparent.html.erb
+++ b/app/views/shared/_navbar-transparent.html.erb
@@ -6,7 +6,7 @@
             <%= image_tag "logo.png", width: "40px" %>
             <% end %>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="icon-menu h4"></i>
+              <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
                <ul class="navbar-nav">
