--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -13,22 +13,28 @@
    </section>
    <section class="flush-with-above">
       <div class="container">
-         <div class="card-columns">
-            <% @teachers.each do |teacher| %>
-            <div class="card">
-               <% if teacher.photo? %>
-               <%= cl_image_tag teacher.photo.path, class: "img-fluid rounded mb-3 card-img" %>
-               <% else %>
-               <%= image_tag "placeholder.png", class: "image-fluid rounded mb-3 card-img" %>
-               <% end %>
-               <div class="card-footer">
-                  <h5 class="mb-0"><%= "#{teacher.first_name} #{teacher.last_name}" %></h5>
-                  <span><%= teacher.location %></span>
-                  <%= link_to "Learn More", teacher_path(teacher), class: "btn btn-lg btn-link text-success" %>
+         <div class="row no-gutters justify-content-center">
+            <div class="col-12 col-lg-10">
+               <div class="feature-list row justify-content-center">
+                  <% @teachers.each do |teacher| %>
+                  <div class="col-6 col-lg-4">
+                     <% if teacher.photo? %>
+                     <%= cl_image_tag teacher.photo.path, height: 300, width: 400, crop: :fill, gravity: :face, class: "img-fluid rounded mb-3 card-img" %>
+                     <% else %>
+                     <%= image_tag "placeholder.png", height: 300, width: 400, crop: :fill, class: "image-fluid rounded mb-3 card-img" %>
+                     <% end %>
+                     <div class="card-footer">
+                        <h5 class="mb-0"><%= "#{teacher.first_name} #{teacher.last_name}" %></h5>
+                        <span><%= teacher.location %></span>
+                        <div class="mt-2">
+                           <%= link_to "Learn More", teacher_path(teacher), class: "btn btn-lg btn-link text-success" %>
+                        </div>
+                     </div>
+                  </div>
+                  <% end %>
+                  <!--end of col-->
                </div>
             </div>
-            <% end %>
-            <!--end of col-->
          </div>
          <!--end of row-->
       </div>
