teacher-show-fix

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -8,11 +8,11 @@
           <div class="text-center">
             <% if @teacher.photo? %>
               <div class="teacher-pic">
-                <%= cl_image_tag @teacher.photo.path, width: 250, height: 350, crop: :fill, gravity: :face %></div>
+                <%= cl_image_tag @teacher.photo.path, class: "img-fluid rounded mb-3 card-img", width: 250, height: 350, crop: :fill, gravity: :face %></div>
             <% end %>
             <div class="row">
               <button type="button" class="btn btn-lg btn-success" data-toggle="modal" data-target="#contact">Contact</button>
-              <span class="btn btn-lg btn-link text-white">Sign up for a trial lesson!</span></div>
+              <span class="btn btn-lg btn-link text-dark">Sign up for a trial lesson!</span></div>
           </div>
           <h1><%= "#{@teacher.first_name} #{@teacher.last_name}" %></h1>
           <ul>
