--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -17,9 +17,9 @@
             <% @teachers.each do |teacher| %>
             <div class="card">
                <% if teacher.photo? %>
-               <%= cl_image_tag teacher.photo.path, class: "img-fluid rounded mb-3 card-img" %>
+               <%= cl_image_tag teacher.photo.path, class: "img-fluid rounded card-img" %>
                <% else %>
-               <%= image_tag "placeholder.png", class: "image-fluid rounded mb-3 card-img" %>
+               <%= image_tag "placeholder.png", class: "image-fluid rounded card-img" %>
                <% end %>
                <div class="card-footer">
                   <h5 class="mb-0"><%= "#{teacher.first_name} #{teacher.last_name}" %></h5>
