--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <!--     google tag manager -->
+      <!-- Google Tag Manager -->
+      <% if Rails.env.production? %>
       <script>
-         document.addEventListener("turbolinks:load", function() {
-         console.log("GTM fired");
-
-                 (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-          new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-          j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-          'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-          })(window,document,'script','dataLayer','GTM-TXSFTM9');
-
-         })
+      document.addEventListener('turbolinks:load', function(event) {
+        var url = event.data.url;  dataLayer.push({
+          'event':'pageView',
+          'virtualUrl': url
+        });
+      });(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-TXSFTM9');
       </script>
-      <!--       google tag manager-->
+      <% end %>
+      <!-- End Google Tag Manager -->
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>Wright Piano School - Piano Lessons in The Hague, Utrecht, Leiden, Amsterdam</title>
