--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,7 @@
       }
 
       document.addEventListener('turbolinks:load', trackPageView, true)
+      </script>
       <% end %>
       <!-- End Google Tag Manager -->
 
