--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <%= render 'shared/flashes' %>
 <div class="main-container">
    <section class="bg-dark height-100">
-     <%= image_tag "annie-picture1.jpg", class: "bg-image opacity-30" %>
+     <%= image_tag "annie-picture1-compressor.jpg", class: "bg-image opacity-30" %>
       <div class="container">
          <div class="row justify-content-center text-center">
             <div class="col-12 col-md-10 col-lg-7">
