--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,10 +48,8 @@
       <title>Wright Piano School - Piano Lessons in The Hague, Utrecht, Leiden, Amsterdam</title>
       <%= csrf_meta_tags %>
       <%= action_cable_meta_tag %>
-
-<!--       <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,400i,500" rel="stylesheet">
- -->      <%= stylesheet_link_tag 'application', media: 'all' %>
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+       <%= stylesheet_link_tag 'application', media: 'all' %>
+<!--       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous"> -->
    </head>
    <body>
       <% if @signup %>
