--- a/app/views/shared/_navbar-transparent.html.erb
+++ b/app/views/shared/_navbar-transparent.html.erb
@@ -3,7 +3,7 @@
       <div class="container">
          <nav class="navbar navbar-expand-lg">
             <%= link_to root_path, class: "navbar-brand" do %>
-            <%= image_tag "logo-compressor.png", width: "40px" %>
+            <%= image_tag "logo-compressor_opt.png", width: "40px" %>
             <% end %>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <i class="fas fa-bars"></i>
