--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,7 @@
       <%= action_cable_meta_tag %>
        <%= stylesheet_link_tag 'application', media: 'all' %>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+      <meta name="google-site-verification" content="8DC_x-veFPG9l5zU77-O7pgtDrASeW1csmJyIVRYlrw" />
    </head>
    <body>
       <% if @signup %>
