--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -35,7 +35,9 @@
                   <p><%= paragraph.content %></p>
                   <% end %>
                   <% if @teacher.id == 1 %>
-                    <a href="http://www.andrewwright.nl">Website Andrew Wright</a>
+                    <a href="http://www.andrewwright.nl">Website Andrew Wright </a> |
+                    <a href="http://www.andrewwright.nl/pages/polyphonic_touch_long_abstract"> Research abstract </a> |
+                    <a href="https://openaccess.leidenuniv.nl/handle/1887/41220"> PhD Dissertation</a>
                   <% end %>
                   <% if current_user %>
                   <% if current_user.email == @teacher.email %>
