--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -5,14 +5,14 @@
       <div class="container">
          <div class="row justify-content-center text-center section-intro">
             <div class="col-12 col-md-9 col-lg-8">
-               <h1>Contact</h1>
+               <h1><%= t(".header1") %></h1>
                <p>Wright Piano School</p>
                <p>Pasteurstraat 340</p>
                <p>2522RX Den Haag</p>
                <p>+31639591941</p>
                <p>wrightpianoschool@gmail.com</p>
                <br>
-               <h3>Locations/regions:</h3>
+               <h3><%= t(".header2") %></h3>
                <p>Utrecht</p>
                <p>Den Haag</p>
                <p>Gouda</p>
