--- a/app/views/pages/videos.html.erb
+++ b/app/views/pages/videos.html.erb
@@ -5,14 +5,14 @@
       <div class="container">
          <div class="row justify-content-center text-center section-intro">
             <div class="col-12 col-md-9 col-lg-8">
-               <h1>Videos of our Students</h1>
-               <p>Nathan plays Liszt Concerto in E-flat with Noord Nederlands Orkest</p>
+               <h1><%= t(".header") %></h1>
+               <p><%= t(".paragraph1") %></p>
                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZsA7FVg7ia8?rel=0&amp;start=484" frameborder="0" allowfullscreen></iframe>
-               <p>Two students playing their own Coldplay mashup!</p>
+               <p><%= t(".paragraph2") %></p>
                <iframe width="560" height="315" src="https://www.youtube.com/embed/j3w8CegEPoA?rel=0" frameborder="0" allowfullscreen></iframe>
-               <p>Nathan plays a Chopin-Godowsky Etude for Left Hand alone in Hamburg</p>
+               <p><%= t(".paragraph3") %></p>
                <iframe width="560" height="315" src="https://www.youtube.com/embed/roGqbdqRq00?rel=0" frameborder="0" allowfullscreen></iframe>
-               <p>Annie Li (7) plays at the Nieuwe Kerk (Den Haag)</p>
+               <p><%= t(".paragraph4") %></p>
                <iframe width="560" height="315" src="https://www.youtube.com/embed/2_snv-JpmFs?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
          </div>
