--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,27 +11,27 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
                <ul class="navbar-nav">
                   <li class="nav-item">
-                     <%= link_to "About", about_pages_path, class: "nav-link" %>
+                     <%= link_to t(".nav-item1"), about_pages_path, class: "nav-link" %>
                   </li>
                   <li class="nav-item">
-                     <%= link_to "Policy and Prices", policy_pages_path, class: "nav-link" %>
+                     <%= link_to t(".nav-item2"), policy_pages_path, class: "nav-link" %>
                   </li>
                   <li class="nav-item">
-                     <%= link_to "Calendar", calendar_pages_path, class: "nav-link" %>
+                     <%= link_to t(".nav-item3"), calendar_pages_path, class: "nav-link" %>
                   </li>
                   <li class="nav-item">
-                     <%= link_to "Teachers", teachers_path, class: "nav-link" %>
+                     <%= link_to t(".nav-item4"), teachers_path, class: "nav-link" %>
                   </li>
                   <li class="nav-item">
-                     <%= link_to "Contact", contact_pages_path, class: "nav-link" %>
+                     <%= link_to t(".nav-item5"), contact_pages_path, class: "nav-link" %>
                   </li>
                   <li class="nav-item">
-                     <%= link_to "Videos", videos_pages_path, class: "nav-link" %>
+                     <%= link_to t(".nav-item6"), videos_pages_path, class: "nav-link" %>
                   </li>
                </ul>
                <ul class="navbar-nav">
                   <li class="nav-item">
-                     <%= link_to "Apply Now", new_student_path, class: "btn btn-outline-primary" %>
+                     <%= link_to t(".nav-item7"), new_student_path, class: "btn btn-outline-primary" %>
                   </li>
                </ul>
             </div>
