--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,9 +6,11 @@
       <div class="container">
          <div class="row justify-content-center text-center">
             <div class="col-12 col-md-10 col-lg-7">
-               <h1 class="display-4">Wright Piano School</h1>
-               <p class="lead text-light">Learn from the best! The Hague, Rotterdam, Utrecht, Leiden, Amsterdam</p>
-               <%= link_to "Apply Now", new_student_path, class: "btn btn-lg btn-success" %>
+               <h1 class="display-4"><%= t(".header") %></h1>
+               <p class="lead text-light"><%= t(".paragraph") %></p>
+               <%= link_to new_student_path, class: "btn btn-lg btn-success" do %>
+                 <%= t(".button") %>
+               <% end %>
             </div>
             <!--end of col-->
          </div>
