--- a/app/views/pages/policy.html.erb
+++ b/app/views/pages/policy.html.erb
@@ -5,10 +5,11 @@
       <div class="container">
          <div class="row justify-content-center text-center section-intro">
             <div class="col-12 col-md-9 col-lg-8">
-               <h1>Studio Policy - Piano Lessons</h1>
-               <p>Please examine the studio policy carefully. It includes prices, information about cancellations and make-up lessons, and many other details. Feel free to call us and ask if you have any questions!</p>
-               <p><%= link_to "Studio Policy 2018 - 2019", download_policy_pages_path, "data-turbolinks": false %></p>
-               </p>
+               <h1><%= t(".header") %></h1>
+               <p><%= t(".paragraph") %></p>
+               <%= link_to download_policy_pages_path, "data-turbolinks": false do %>
+                 <%= t(".link") %>
+               <% end %>
             </div>
          </div>
       </div>
