--- a/app/views/students/_student_form.html.erb
+++ b/app/views/students/_student_form.html.erb
@@ -2,49 +2,49 @@
    <div class="container">
       <div class="row justify-content-center text-center section-intro">
          <div class="col-12 col-md-9 col-lg-8">
-            <p>Fill in this application for a free trial lesson!</p>
+            <p><%= t(".paragraph1") %></p>
             <%= simple_form_for @student do |f| %>
             <div class="row">
                <div class="col-6">
                   <div class="form-group">
-                     <%= f.input :first_name, class: "form-control form-control-lg", required: true, label: false, placeholder: "Parent First Name" %>
+                     <%= f.input :first_name, class: "form-control form-control-lg", required: true, label: false, placeholder: t(".placeholder1") %>
                   </div>
                </div>
                <div class="col-6">
                   <div class="form-group">
-                     <%= f.input :last_name, required: true, label: false, placeholder: "Parent Last Name" %>
+                     <%= f.input :last_name, required: true, label: false, placeholder: t(".placeholder2") %>
                   </div>
                </div>
                <div class="col-6">
                   <div class="form-group">
-                     <%= f.input :phone, label: false, placeholder: "Phone Number" %>
+                     <%= f.input :phone, label: false, placeholder: t(".placeholder3") %>
                   </div>
                </div>
                <div class="col-6">
                   <div class="form-group">
-                     <%= f.input :email, required: true, label: false, placeholder: "Email" %>
+                     <%= f.input :email, required: true, label: false, placeholder: t(".placeholder4") %>
                   </div>
                </div>
                <div class="col-6">
                   <div class="form-group">
-                     <%= f.input :address, required: true, label: false, placeholder: "Address" %>
+                     <%= f.input :address, required: true, label: false, placeholder: t(".placeholder5") %>
                   </div>
                </div>
                <div class="col-6">
                   <div class="form-group">
-                     <%= f.input :zip_code, required: true, label: false, placeholder: "Zip code" %>
+                     <%= f.input :zip_code, required: true, label: false, placeholder: t(".placeholder6") %>
                   </div>
                </div>
                <div class="col-12">
                   <div class="form-group">
-                     <%= f.input :languages, label: false, placeholder: "Preferred language of instruction (English, Dutch, German etc.)" %>
+                     <%= f.input :languages, label: false, placeholder: t(".placeholder7") %>
                   </div>
                </div>
                <div class="col-12">
-                  <%= f.input :in_home, label: false, placeholder: "Please indicate whether you would like lessons at your home, or at the teacher's location" %>
+                  <%= f.input :in_home, label: false, placeholder: t(".placeholder8") %>
                </div>
                <div class="col-12">
-                  <%= f.input :times, label: false, placeholder: "Times available (list as many as possible)" %>
+                  <%= f.input :times, label: false, placeholder: t(".placeholder9") %>
                </div>
                <div class="col-12">
                   <div id="student_children">
@@ -52,19 +52,21 @@
                      <%= render 'student_child_fields', f: student_child %>
                      <% end %>
                      <div class="links">
-                        <%= link_to_add_association 'Add Child', f, :student_children, class: "btn btn btn-primary" %>
+                        <%= link_to_add_association f, :student_children, class: "btn btn btn-primary" do %>
+                          <%= t(".link1") %>
+                        <% end %>
                      </div>
                   </div>
                   <br>
                </div>
                <div class="col-12">
-                  <%= f.input :notes, label: false, placeholder: "Notes" %>
+                  <%= f.input :notes, label: false, placeholder: t(".placeholder10") %>
                </div>
                <div class="col-12">
-                  <%= f.input :referral, label: "How did you hear about us?", collection: ["Google search", "Word-of-mouth referral", "Poster / flyer", "Competition, masterclass, or other activity", "Other"] %>
+                  <%= f.input :referral, label: t(".label1"), collection: [t(".collection1"), t(".collection2"), t(".collection3"), t(".collection4"), t(".collection5")] %>
                </div>
                <div class="col-12">
-                  <%= f.button :submit, "Send Application", class: "btn btn-success" %>
+                  <%= f.button :submit, t(".button1"), class: "btn btn-success" %>
                </div>
             </div>
             <% end %>
