--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -5,8 +5,8 @@
       <div class="container">
          <div class="row justify-content-center text-center section-intro">
             <div class="col-12 col-md-9 col-lg-8">
-               <h1>Piano Teachers</h1>
-               <p>Please click on a teacher to display their full information!</p>
+              <h1><%= t(".header") %></h1>
+              <p><%= t(".paragraph") %></p>
             </div>
          </div>
       </div>
