--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -29,6 +29,16 @@
                      <%= link_to t(".nav-item6"), videos_pages_path, class: "nav-link" %>
                   </li>
                </ul>
+                <% if locale == :en %>
+                  <%= link_to locale: :nl do %>
+                    <%= image_tag 'Netherlands.png', width: 25 %>
+                  <% end %>
+                <% else %>
+                  <%= link_to locale: :en do %>
+                    <%= image_tag 'UK.png', width: 25 %>
+                  <% end %>
+                <% end %>
+
                <ul class="navbar-nav">
                   <li class="nav-item">
                      <%= link_to t(".nav-item7"), new_student_path, class: "btn btn-outline-primary" %>
