--- a/app/views/shared/_navbar-transparent.html.erb
+++ b/app/views/shared/_navbar-transparent.html.erb
@@ -8,7 +8,8 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <i class="fas fa-bars"></i>
             </button>
-            <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+            <%= render 'shared/navbar_links' %>
+<!--             <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
                <ul class="navbar-nav">
                   <li class="nav-item">
                      <%= link_to "About", about_pages_path, class: "nav-link" %>
@@ -34,7 +35,7 @@
                      <%= link_to "Apply Now", new_student_path, class: "btn btn-outline-primary" %>
                   </li>
                </ul>
-            </div>
+            </div> -->
             <!--end nav collapse-->
          </nav>
       </div>
