--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,43 +8,8 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <i class="fas fa-bars"></i>
             </button>
-            <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-               <ul class="navbar-nav">
-                  <li class="nav-item">
-                     <%= link_to t(".nav-item1"), about_pages_path, class: "nav-link" %>
-                  </li>
-                  <li class="nav-item">
-                     <%= link_to t(".nav-item2"), policy_pages_path, class: "nav-link" %>
-                  </li>
-                  <li class="nav-item">
-                     <%= link_to t(".nav-item3"), calendar_pages_path, class: "nav-link" %>
-                  </li>
-                  <li class="nav-item">
-                     <%= link_to t(".nav-item4"), teachers_path, class: "nav-link" %>
-                  </li>
-                  <li class="nav-item">
-                     <%= link_to t(".nav-item5"), contact_pages_path, class: "nav-link" %>
-                  </li>
-                  <li class="nav-item">
-                     <%= link_to t(".nav-item6"), videos_pages_path, class: "nav-link" %>
-                  </li>
-               </ul>
-                <% if locale == :en %>
-                  <%= link_to locale: :nl do %>
-                    <%= image_tag 'Netherlands.png', width: 25 %>
-                  <% end %>
-                <% else %>
-                  <%= link_to locale: :en do %>
-                    <%= image_tag 'UK.png', width: 25 %>
-                  <% end %>
-                <% end %>
+            <%= render 'shared/navbar_links' %>
 
-               <ul class="navbar-nav">
-                  <li class="nav-item">
-                     <%= link_to t(".nav-item7"), new_student_path, class: "btn btn-outline-primary" %>
-                  </li>
-               </ul>
-            </div>
             <!--end nav collapse-->
          </nav>
       </div>
