remove teachers message form

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -47,7 +47,7 @@
                   <% end %>
                   <% end %>
 
-                  <div id="contact" class="modal fade" role="dialog">
+                <!--   <div id="contact" class="modal fade" role="dialog">
                     <div class="modal-dialog">
 
                       <!-- Modal content-->
@@ -76,7 +76,7 @@
                       </div>
 
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
