--- a/app/views/pages/calendar.html.erb
+++ b/app/views/pages/calendar.html.erb
@@ -6,10 +6,11 @@
          <div class="row justify-content-center text-center section-intro">
             <div class="col-12 col-md-9 col-lg-8">
                <h1><%= t(".header") %></h1>
-               <p><%= t(".paragraph") %></p>
+                <p>Please contact us for more information!</p>
+<!--                <p><%= t(".paragraph") %></p>
                <%= link_to download_calendar_pages_path, "data-turbolinks": false  do %>
                  <%= t(".link") %>
-               <% end %>
+               <% end %> -->
             </div>
          </div>
       </div>
