--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -7,8 +7,8 @@
             <div class="col-12 col-md-9 col-lg-8">
                <h1><%= t(".header1") %></h1>
                <p>Wright Piano School</p>
-               <p>Pasteurstraat 340</p>
-               <p>2522RX Den Haag</p>
+<!--                <p>Pasteurstraat 340</p>
+               <p>2522RX Den Haag</p> -->
                <p>+31639591941</p>
                <p>wrightpianoschool@gmail.com</p>
                <br>
