update rails, update videos page, update ruby

--- a/app/views/pages/videos.html.erb
+++ b/app/views/pages/videos.html.erb
@@ -8,8 +8,8 @@
                <h1><%= t(".header") %></h1>
                <p><%= t(".paragraph1") %></p>
                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZsA7FVg7ia8?rel=0&amp;start=484" frameborder="0" allowfullscreen></iframe>
-               <p><%= t(".paragraph2") %></p>
-               <iframe width="560" height="315" src="https://www.youtube.com/embed/j3w8CegEPoA?rel=0" frameborder="0" allowfullscreen></iframe>
+             <!--   <p><%= t(".paragraph2") %></p>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/j3w8CegEPoA?rel=0" frameborder="0" allowfullscreen></iframe> -->
                <p><%= t(".paragraph3") %></p>
                <iframe width="560" height="315" src="https://www.youtube.com/embed/roGqbdqRq00?rel=0" frameborder="0" allowfullscreen></iframe>
                <p><%= t(".paragraph4") %></p>
